// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`many-extends.spec.ts > many-extends.spec.ts 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2018": true,
    },
    "overrides": [
      {
        "env": {
          "node": true,
        },
        "files": [
          "foo.js",
        ],
        "rules": {
          "import/no-commonjs": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "import/consistent-type-specifier-style": [
            "error",
            "prefer-top-level",
          ],
          "import/no-default-export": "warn",
          "jsdoc/check-tag-names": [
            "warn",
            {
              "typed": true,
            },
          ],
          "jsdoc/require-param": "off",
          "jsdoc/require-param-type": "off",
          "jsdoc/require-property-type": "off",
          "jsdoc/require-returns": "off",
          "jsdoc/require-returns-type": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "error",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": "error",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [
      "import",
      "jsdoc",
      "react",
    ],
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "import/default": "error",
      "import/namespace": "error",
      "import/no-duplicates": "warn",
      "import/no-named-as-default": "warn",
      "import/no-named-as-default-member": "warn",
      "jsdoc/check-access": "warn",
      "jsdoc/check-property-names": "warn",
      "jsdoc/check-tag-names": "warn",
      "jsdoc/empty-tags": "warn",
      "jsdoc/implements-on-classes": "warn",
      "jsdoc/no-defaults": "warn",
      "jsdoc/require-param": "warn",
      "jsdoc/require-param-description": "warn",
      "jsdoc/require-param-name": "warn",
      "jsdoc/require-param-type": "warn",
      "jsdoc/require-property": "warn",
      "jsdoc/require-property-description": "warn",
      "jsdoc/require-property-name": "warn",
      "jsdoc/require-property-type": "warn",
      "jsdoc/require-returns": "warn",
      "jsdoc/require-returns-description": "warn",
      "jsdoc/require-returns-type": "warn",
      "jsdoc/require-yields": "warn",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "preserve-caught-error": "error",
      "react/button-has-type": "error",
      "react/display-name": "error",
      "react/exhaustive-deps": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/rules-of-hooks": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-useless-assignment",
      "jsdoc/check-alignment",
      "jsdoc/check-param-names",
      "jsdoc/check-types",
      "jsdoc/check-values",
      "jsdoc/escape-inline-tags",
      "jsdoc/multiline-blocks",
      "jsdoc/no-multi-asterisks",
      "jsdoc/no-undefined-types",
      "jsdoc/reject-any-type",
      "jsdoc/reject-function-type",
      "jsdoc/require-jsdoc",
      "jsdoc/require-next-type",
      "jsdoc/require-returns-check",
      "jsdoc/require-throws-type",
      "jsdoc/require-yields-check",
      "jsdoc/require-yields-type",
      "jsdoc/tag-lines",
      "jsdoc/ts-no-empty-object-type",
      "jsdoc/valid-types",
      "react/no-deprecated",
      "react/prop-types",
      "jsdoc/no-types",
      "react/prefer-stateless-function",
      "react/function-component-definition",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "import/named",
      "import/export",
      "react/require-render-return",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "import/no-unresolved",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
      "react/jsx-uses-react",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`many-extends.spec.ts --js-plugins > many-extends.spec.ts--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2018": true,
    },
    "overrides": [
      {
        "env": {
          "node": true,
        },
        "files": [
          "foo.js",
        ],
        "rules": {
          "import/no-commonjs": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "import/consistent-type-specifier-style": [
            "error",
            "prefer-top-level",
          ],
          "import/no-default-export": "warn",
          "jsdoc/check-tag-names": [
            "warn",
            {
              "typed": true,
            },
          ],
          "jsdoc/require-param": "off",
          "jsdoc/require-param-type": "off",
          "jsdoc/require-property-type": "off",
          "jsdoc/require-returns": "off",
          "jsdoc/require-returns-type": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "error",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": "error",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [
      "import",
      "jsdoc",
      "react",
    ],
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "import/default": "error",
      "import/namespace": "error",
      "import/no-duplicates": "warn",
      "import/no-named-as-default": "warn",
      "import/no-named-as-default-member": "warn",
      "jsdoc/check-access": "warn",
      "jsdoc/check-property-names": "warn",
      "jsdoc/check-tag-names": "warn",
      "jsdoc/empty-tags": "warn",
      "jsdoc/implements-on-classes": "warn",
      "jsdoc/no-defaults": "warn",
      "jsdoc/require-param": "warn",
      "jsdoc/require-param-description": "warn",
      "jsdoc/require-param-name": "warn",
      "jsdoc/require-param-type": "warn",
      "jsdoc/require-property": "warn",
      "jsdoc/require-property-description": "warn",
      "jsdoc/require-property-name": "warn",
      "jsdoc/require-property-type": "warn",
      "jsdoc/require-returns": "warn",
      "jsdoc/require-returns-description": "warn",
      "jsdoc/require-returns-type": "warn",
      "jsdoc/require-yields": "warn",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "preserve-caught-error": "error",
      "react/button-has-type": "error",
      "react/display-name": "error",
      "react/exhaustive-deps": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/rules-of-hooks": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-useless-assignment",
      "jsdoc/check-alignment",
      "jsdoc/check-param-names",
      "jsdoc/check-types",
      "jsdoc/check-values",
      "jsdoc/escape-inline-tags",
      "jsdoc/multiline-blocks",
      "jsdoc/no-multi-asterisks",
      "jsdoc/no-undefined-types",
      "jsdoc/reject-any-type",
      "jsdoc/reject-function-type",
      "jsdoc/require-jsdoc",
      "jsdoc/require-next-type",
      "jsdoc/require-returns-check",
      "jsdoc/require-throws-type",
      "jsdoc/require-yields-check",
      "jsdoc/require-yields-type",
      "jsdoc/tag-lines",
      "jsdoc/ts-no-empty-object-type",
      "jsdoc/valid-types",
      "react/no-deprecated",
      "react/prop-types",
      "jsdoc/no-types",
      "react/prefer-stateless-function",
      "react/function-component-definition",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "import/named",
      "import/export",
      "react/require-render-return",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "import/no-unresolved",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
      "react/jsx-uses-react",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`many-extends.spec.ts --type-aware > many-extends.spec.ts--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2018": true,
    },
    "options": {
      "typeAware": true,
    },
    "overrides": [
      {
        "env": {
          "node": true,
        },
        "files": [
          "foo.js",
        ],
        "rules": {
          "import/no-commonjs": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "import/consistent-type-specifier-style": [
            "error",
            "prefer-top-level",
          ],
          "import/no-default-export": "warn",
          "jsdoc/check-tag-names": [
            "warn",
            {
              "typed": true,
            },
          ],
          "jsdoc/require-param": "off",
          "jsdoc/require-param-type": "off",
          "jsdoc/require-property-type": "off",
          "jsdoc/require-returns": "off",
          "jsdoc/require-returns-type": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "error",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": "error",
          "typescript/await-thenable": "error",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": "error",
          "typescript/no-array-delete": "error",
          "typescript/no-base-to-string": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-confusing-void-expression": "error",
          "typescript/no-deprecated": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-duplicate-type-constituents": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-floating-promises": "error",
          "typescript/no-for-in-array": "error",
          "typescript/no-implied-eval": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-meaningless-void-operator": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-misused-promises": "error",
          "typescript/no-misused-spread": "error",
          "typescript/no-mixed-enums": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-redundant-type-constituents": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-boolean-literal-compare": "error",
          "typescript/no-unnecessary-template-expression": "error",
          "typescript/no-unnecessary-type-arguments": "error",
          "typescript/no-unnecessary-type-assertion": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-argument": "error",
          "typescript/no-unsafe-assignment": "error",
          "typescript/no-unsafe-call": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-enum-comparison": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-unsafe-member-access": "error",
          "typescript/no-unsafe-return": "error",
          "typescript/no-unsafe-unary-minus": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/non-nullable-type-assertion-style": "error",
          "typescript/only-throw-error": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-includes": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-nullish-coalescing": "error",
          "typescript/prefer-promise-reject-errors": "error",
          "typescript/prefer-reduce-type-parameter": "error",
          "typescript/prefer-return-this-type": "error",
          "typescript/related-getter-setter-pairs": "error",
          "typescript/require-await": "error",
          "typescript/restrict-plus-operands": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNullish": false,
              "allowNumberAndString": false,
              "allowRegExp": false,
            },
          ],
          "typescript/restrict-template-expressions": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNever": false,
              "allowNullish": false,
              "allowNumber": false,
              "allowRegExp": false,
            },
          ],
          "typescript/return-await": [
            "error",
            "error-handling-correctness-only",
          ],
          "typescript/triple-slash-reference": "error",
          "typescript/unbound-method": "error",
          "typescript/unified-signatures": "error",
          "typescript/use-unknown-in-catch-callback-variable": "error",
        },
      },
    ],
    "plugins": [
      "import",
      "jsdoc",
      "react",
    ],
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "import/default": "error",
      "import/namespace": "error",
      "import/no-duplicates": "warn",
      "import/no-named-as-default": "warn",
      "import/no-named-as-default-member": "warn",
      "jsdoc/check-access": "warn",
      "jsdoc/check-property-names": "warn",
      "jsdoc/check-tag-names": "warn",
      "jsdoc/empty-tags": "warn",
      "jsdoc/implements-on-classes": "warn",
      "jsdoc/no-defaults": "warn",
      "jsdoc/require-param": "warn",
      "jsdoc/require-param-description": "warn",
      "jsdoc/require-param-name": "warn",
      "jsdoc/require-param-type": "warn",
      "jsdoc/require-property": "warn",
      "jsdoc/require-property-description": "warn",
      "jsdoc/require-property-name": "warn",
      "jsdoc/require-property-type": "warn",
      "jsdoc/require-returns": "warn",
      "jsdoc/require-returns-description": "warn",
      "jsdoc/require-returns-type": "warn",
      "jsdoc/require-yields": "warn",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "preserve-caught-error": "error",
      "react/button-has-type": "error",
      "react/display-name": "error",
      "react/exhaustive-deps": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/rules-of-hooks": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-useless-assignment",
      "jsdoc/check-alignment",
      "jsdoc/check-param-names",
      "jsdoc/check-types",
      "jsdoc/check-values",
      "jsdoc/escape-inline-tags",
      "jsdoc/multiline-blocks",
      "jsdoc/no-multi-asterisks",
      "jsdoc/no-undefined-types",
      "jsdoc/reject-any-type",
      "jsdoc/reject-function-type",
      "jsdoc/require-jsdoc",
      "jsdoc/require-next-type",
      "jsdoc/require-returns-check",
      "jsdoc/require-throws-type",
      "jsdoc/require-yields-check",
      "jsdoc/require-yields-type",
      "jsdoc/tag-lines",
      "jsdoc/ts-no-empty-object-type",
      "jsdoc/valid-types",
      "react/no-deprecated",
      "react/prop-types",
      "jsdoc/no-types",
      "react/prefer-stateless-function",
      "react/function-component-definition",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "import/named",
      "import/export",
      "react/require-render-return",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "import/no-unresolved",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
      "react/jsx-uses-react",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;

exports[`many-extends.spec.ts merge > many-extends.spec.ts--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "es2018": true,
    },
    "overrides": [
      {
        "env": {
          "node": true,
        },
        "files": [
          "foo.js",
        ],
        "rules": {
          "import/no-commonjs": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "import/consistent-type-specifier-style": [
            "error",
            "prefer-top-level",
          ],
          "import/no-default-export": "warn",
          "jsdoc/check-tag-names": [
            "warn",
            {
              "typed": true,
            },
          ],
          "jsdoc/require-param": "off",
          "jsdoc/require-param-type": "off",
          "jsdoc/require-property-type": "off",
          "jsdoc/require-returns": "off",
          "jsdoc/require-returns-type": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "error",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "react/jsx-key": "error",
          "react/jsx-no-duplicate-props": "error",
          "react/jsx-no-undef": "error",
          "react/no-children-prop": "error",
          "react/no-danger-with-children": "error",
          "react/no-direct-mutation-state": "error",
          "react/no-find-dom-node": "error",
          "react/no-is-mounted": "error",
          "react/no-render-return-value": "error",
          "react/no-string-refs": "error",
          "react/react-in-jsx-scope": "off",
          "require-await": "off",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": "error",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [
      "import",
      "jsdoc",
      "react",
    ],
    "rules": {
      "import/no-duplicates": "warn",
      "import/no-named-as-default": "warn",
      "import/no-named-as-default-member": "warn",
      "jsdoc/check-access": "warn",
      "jsdoc/check-property-names": "warn",
      "jsdoc/check-tag-names": "warn",
      "jsdoc/empty-tags": "warn",
      "jsdoc/implements-on-classes": "warn",
      "jsdoc/no-defaults": "warn",
      "jsdoc/require-param": "warn",
      "jsdoc/require-param-description": "warn",
      "jsdoc/require-param-name": "warn",
      "jsdoc/require-param-type": "warn",
      "jsdoc/require-property": "warn",
      "jsdoc/require-property-description": "warn",
      "jsdoc/require-property-name": "warn",
      "jsdoc/require-property-type": "warn",
      "jsdoc/require-returns": "warn",
      "jsdoc/require-returns-description": "warn",
      "jsdoc/require-returns-type": "warn",
      "jsdoc/require-yields": "warn",
      "no-case-declarations": "error",
      "no-empty": "error",
      "no-fallthrough": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-unexpected-multiline": "error",
      "preserve-caught-error": "error",
      "react/button-has-type": "error",
      "react/display-name": "error",
      "react/exhaustive-deps": "warn",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-target-blank": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/no-unsafe": "off",
      "react/react-in-jsx-scope": "error",
      "react/rules-of-hooks": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-useless-assignment",
      "jsdoc/check-alignment",
      "jsdoc/check-param-names",
      "jsdoc/check-types",
      "jsdoc/check-values",
      "jsdoc/escape-inline-tags",
      "jsdoc/multiline-blocks",
      "jsdoc/no-multi-asterisks",
      "jsdoc/no-undefined-types",
      "jsdoc/reject-any-type",
      "jsdoc/reject-function-type",
      "jsdoc/require-jsdoc",
      "jsdoc/require-next-type",
      "jsdoc/require-returns-check",
      "jsdoc/require-throws-type",
      "jsdoc/require-yields-check",
      "jsdoc/require-yields-type",
      "jsdoc/tag-lines",
      "jsdoc/ts-no-empty-object-type",
      "jsdoc/valid-types",
      "react/no-deprecated",
      "react/prop-types",
      "jsdoc/no-types",
      "react/prefer-stateless-function",
      "react/function-component-definition",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "import/named",
      "import/export",
      "react/require-render-return",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "import/no-unresolved",
      "react/jsx-uses-vars",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
      "react/jsx-uses-react",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
  ],
}
`;
